devops/airflowk8s/airflow2/airflow/templates/worker/service-headless.yaml
---
# Source: airflow/templates/worker/service-headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: release-name-airflow-worker-hl
  namespace: "default"
  labels:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: airflow
    app.kubernetes.io/version: 2.10.3
    helm.sh/chart: airflow-21.5.1
    app.kubernetes.io/component: worker
spec:
  type: ClusterIP
  clusterIP: None
  ports:
    - name: worker
      port: 8793
      targetPort: worker
  selector:
    app.kubernetes.io/instance: release-name
    app.kubernetes.io/name: airflow
    app.kubernetes.io/component: worker
